<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".ui.main.TagManageFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/manage_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:divider="?android:attr/listDivider"
            android:orientation="vertical"
            android:showDividers="middle|end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    
                    android:gravity="end"
                    android:text="@string/select_tag"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_choice_epc_tid"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    
                    android:gravity="end"
                    android:text=" "
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/manage_epc_datas_spinner"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                      />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/bankid"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/manage_bank_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/bank" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    
                    android:gravity="end"
                    android:text="@string/access_password"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/manage_password_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="00000000"
                    android:maxLength="8"
                    android:digits="1234567890ABCDEFabcdef"
                    android:text="00000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    
                    android:gravity="end"
                    android:text="@string/memptr"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/manage_address_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:digits="1234567890"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    
                    android:gravity="end"
                    android:text="@string/memlen"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/manage_cnt_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:digits="1234567890"
                    android:text="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    
                    android:gravity="end"
                    android:text="@string/writestr"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/manage_write_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:digits="1234567890ABCDEFabcdef"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag_hint" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/manage_read_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/green"
            android:text="@string/butnread"

            app:layout_constraintEnd_toStartOf="@+id/manage_write_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manage_form_layout" />

        <Button
            android:id="@+id/manage_write_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/butnwrite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/manage_read_btn"
            app:layout_constraintTop_toTopOf="@+id/manage_read_btn" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manage_read_btn">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:divider="?android:attr/listDivider"
                android:orientation="vertical"
                android:showDividers="middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/read_tags" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="EPC" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="PC" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="DATA" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="CRC" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/manage_list_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>